syntax = "proto3";

message TestFixturesDebug {
  string content = 1;
}
