syntax = "proto3";

message TestRelease {
  string content = 1;
}
