syntax = "proto3";

message AndroidTest {
  string content = 1;
}
