syntax = "proto3";

message TestDebug {
  string content = 1;
}
