syntax = "proto3";

message AndroidTestDebug {
  string content = 1;
}
