syntax = "proto3";

message TestFixtures {
  string content = 1;
}
