syntax = "proto3";

message TestFixturesRelease {
  string content = 1;
}
